--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       <h1>Pizza Recipe</h1>
 
 
-<button type="button" class="btn btn-outline-light"><a href="./index.html">Home</a></button>
+<button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
 <button type="button" class="btn btn-outline-light"><a href="./recipe.html">Recipe</a></button>
 <button type="button" class="btn btn-outline-light"><a href="./restaurants.html">Restaurants</a></button>
+
 
     </header>
     <article class="container">
