--- a/recipe.html
+++ b/recipe.html
@@ -1,20 +1,30 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="./style.css" type="text/css" rel="stylesheet">
-
     </head>
     <body>
     <header>
-        <h1>Pizza Recipe</h1>
-        <div><a href="./index.html">Home</a></div>
-        <div><a href="./recipe.html">Recipe</a></div>
-        <div><a href="./restaurants.html">Restaurants</a></div>
+      <h1>Pizza Recipe</h1>
+
+
+<button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
+<button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipe</a></button>
+<button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
+
+
     </header>
-    <article>
-        <img >
+    <article class="container">
+        <img src="images/creatv-eight-smN1dzUTj9Y-unsplash.jpg" class="home_pizza" lt="image of pizza">
+       <div class="recipe">
+           <p>Recipe</p>
+           <p>Ingredients</p>
+           <p>Prepared pizza base <br> 100g hummus <br> 50g chickpeas <br> 2 small beetroot <br> 100g rocket</p>
+       </div>
     </article>
     <footer>
-        
     </footer>
     </body>
 </html>
