--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="./style.css" type="text/css" rel="stylesheet">
+        <link href="./index-style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
     <header>
-      <h1>Pizza Recipe</h1>
-
-
-<button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
-<button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipe</a></button>
-<button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
-
+      <div>
+        <h1>Two Vegan Pizza Recipes</h1>
+      </div>
+      <nav>
+        <button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
+        <button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipes</a></button>
+        <button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
+      </nav>
     </header>
-    <article class="container">
+
+    <main>
+      <section><p>Beet “Falafel” Pizza Crust with Sun Dried Tomato Hummus and Avocado</p></section>
+      <section>
         <img src="images/creatv-eight-smN1dzUTj9Y-unsplash.jpg" class="home_pizza" lt="image of pizza">
-    </article>
+      </section>
+      <section><p>Mushroom and Spinach Pizza with Truffle Oil</p></section>
+      <section>
+        <img src="images/edgar-castrejon-rzwe52hDK7w-unsplash.jpg" class="home_pizza" lt="image of pizza">
+      </section>
+  </main>
     <footer>
+      <h1>Two Vegan Pizza Recipes</h1>
     </footer>
     </body>
 </html>
