recipe page ready

--- a/recipe.html
+++ b/recipe.html
@@ -1,20 +1,101 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link href="./style.css" type="text/css" rel="stylesheet">
 
-    </head>
-    <body>
-    <header>
-        <h1>Pizza Recipe</h1>
-        <div><a href="./index.html">Home</a></div>
-        <div><a href="./recipe.html">Recipe</a></div>
-        <div><a href="./restaurants.html">Restaurants</a></div>
-    </header>
-    <article>
-        <img >
-    </article>
-    <footer>
-        
-    </footer>
-    </body>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="./recipe-style.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="title">
+      <h1>Full Recipes & Ingredients</h1>
+    </div>
+    <nav>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipe</a></button>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <p>Beet “Falafel” Pizza Crust with Sun Dried Tomato Hummus and Avocado</p>
+    </section>
+    <section class="recipe_1">
+      <section>
+        <img src="images/creatv-eight-smN1dzUTj9Y-unsplash.jpg" class="home_pizza_small" lt="image of pizza">
+      </section>
+      <div class="column1">
+        <h3>Ingredients</h3>
+        <h3>Pizza Crust:</h3>
+        <p>
+          1 Cup beet hummus<br>
+          1 Cup cassava flour<br>
+          1/4 Cup olive oil (I added one tablespoon of oil at a time until good consistency.)<br>
+          <p>
+      </div>
+      <div class="column2">
+        <h3>Sun Dried Tomato Hummus:</h3>
+        <p>
+          1 can garbanzo beans (salt free and skins removed)<br>
+          1 clove of garlic<br>
+          1 tablespoon lemon juice<br>
+          2 tablespoons tahini<br>
+          3 tablespoons olive oil (I used from the jar of sun dried tomatoes)<br>
+          1/4 cup sun dried tomatoes in oil<br>
+          2-3 tablespoons of water<br>
+          Salt/pepper to taste (I used 1/2 teaspoon each)<br>
+          1/4 cup fresh basil<br>
+          Pinch of red pepper flakes<br>
+          1/4 cup of water<br>
+        </p>
+      </div>
+      <div class="column3">
+        <h3>Instructions</h3>
+        <p>Preheat oven to 400.<br>
+          In a medium bowl, mix together the hummus, flour and olive oil and form a crust with the dough.<br>
+          Spread the dough out on top of a parchment paper lined baking sheet.<br>
+          Bake for about 15-20 mins until cooked through.<br>
+          While the crust is baking, make the sun dried tomato hummus.<br>
+          Place garbanzo beans, garlic, lemon juice, Tahini, olive oil, sun dried tomatoes, water, salt, pepper, basil and water In a food processor and process until smooth. (If it needs more water add it in and process more.)<br>
+          When the crust is done, allow to cool then top with hummus, avocado, veggies and a Tahini drizzle.</p>
+      </div>
+    </section>
+    <section>
+      <p>Mushroom and Spinach Pizza with Truffle Oil</p>
+    </section>
+    <section>
+      <img src="images/edgar-castrejon-rzwe52hDK7w-unsplash.jpg" class="home_pizza_small" lt="image of pizza">
+    </section>
+    <section>
+      <div class="column2">
+        <h3>Ingredients:</h3>
+        <p>
+          Any basic pizza dough recipe<br>
+          2 C mushrooms, sliced<br>
+          1-1/2 C fresh spinach, torn or chopped<br>
+          1 C fresh basil leaves, torn or chopped<br>
+          3/4 C Daiya mozzarella cheese<br>
+          Truffle oil, to taste<br>
+          Vegan margarine<br>
+        </p>
+      </div>
+      <div class="column3">
+        <h3>Directions:</h3>
+        <p>Preheat oven to 425. Combine the mushrooms, spinach, basil, and truffle oil in a medium bowl; set aside. Using about a teaspoon of margarine, I greased a round pizza pan. Press dough onto the pan. Stick several times with a fork.<br>
+          Mushroom and Spinach Pizza with Truffle Oil -- Epicurean VeganBake the crust for 5 minutes, or until it begins to brown. Sprinkle a thin layer of cheese on top of the crust. Next, add all of the spinach/mushrooms mixture. Top with remaining
+          cheese.<br>Mushroom and Spinach Pizza with Truffle Oil -- Epicurean VeganBake for 10 minutes, or until the edge of the crust browns. Slice and enjoy!
+      </div>
+
+
+
+
+  </main>
+  <footer>
+    <h1>Two Vegan Pizza Recipes</h1>
+  </footer>
+</body>
+
 </html>
