--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
       <section>
         <img src="images/creatv-eight-smN1dzUTj9Y-unsplash.jpg" class="home_pizza" lt="image of pizza">
       </section>
+      <section class="photo_credits">
+        <p class="credits">Photo by Creatv Eight on Unsplash</p>
+      </section>
       <section><p>Mushroom and Spinach Pizza with Truffle Oil</p></section>
       <section>
         <img src="images/edgar-castrejon-rzwe52hDK7w-unsplash.jpg" class="home_pizza" lt="image of pizza">
       </section>
+      <section class="photo_credits">
+        <p class="credits">Photo by Edgar Castrejon on Unsplash</p>
+      </section>
   </main>
-    <footer>
-      <h1>Two Vegan Pizza Recipes</h1>
-    </footer>
+  <footer>
+    <h1>Two Vegan Pizza Recipes</h1>
+    <p class="credits">Background Photo by Markus Spiske on Unsplash</p>
+  </footer>
     </body>
 </html>
