--- a/recipe.html
+++ b/recipe.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
-      <button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipe</a></button>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipes</a></button>
       <button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
     </nav>
   </header>
@@ -27,6 +27,9 @@
       <section>
         <img src="images/creatv-eight-smN1dzUTj9Y-unsplash.jpg" class="home_pizza_small" lt="image of pizza">
       </section>
+      <section class="photo_credits">
+        <p class="credits">Photo by Creatv Eight on Unsplash</p>
+      </section>
       <div class="column1">
         <h3>Ingredients</h3>
         <h3>Pizza Crust:</h3>
@@ -36,7 +39,7 @@
           1/4 Cup olive oil (I added one tablespoon of oil at a time until good consistency.)<br>
           <p>
       </div>
-      <div class="column2">
+      <div class="column1">
         <h3>Sun Dried Tomato Hummus:</h3>
         <p>
           1 can garbanzo beans (salt free and skins removed)<br>
@@ -52,7 +55,7 @@
           1/4 cup of water<br>
         </p>
       </div>
-      <div class="column3">
+      <div class="column1">
         <h3>Instructions</h3>
         <p>Preheat oven to 400.<br>
           In a medium bowl, mix together the hummus, flour and olive oil and form a crust with the dough.<br>
@@ -66,11 +69,14 @@
     <section>
       <p>Mushroom and Spinach Pizza with Truffle Oil</p>
     </section>
-    <section>
-      <img src="images/edgar-castrejon-rzwe52hDK7w-unsplash.jpg" class="home_pizza_small" lt="image of pizza">
-    </section>
-    <section>
-      <div class="column2">
+      <section class="recipe_1">
+      <section>
+        <img src="images/edgar-castrejon-rzwe52hDK7w-unsplash.jpg" class="home_pizza_small" lt="image of pizza">
+      </section>
+      <section class="photo_credits">
+        <p class="credits">Photo by Edgar Castrejon on Unsplash</p>
+      </section>
+      <div class="column1">
         <h3>Ingredients:</h3>
         <p>
           Any basic pizza dough recipe<br>
@@ -82,19 +88,17 @@
           Vegan margarine<br>
         </p>
       </div>
-      <div class="column3">
+      <div class="column1">
         <h3>Directions:</h3>
         <p>Preheat oven to 425. Combine the mushrooms, spinach, basil, and truffle oil in a medium bowl; set aside. Using about a teaspoon of margarine, I greased a round pizza pan. Press dough onto the pan. Stick several times with a fork.<br>
           Mushroom and Spinach Pizza with Truffle Oil -- Epicurean VeganBake the crust for 5 minutes, or until it begins to brown. Sprinkle a thin layer of cheese on top of the crust. Next, add all of the spinach/mushrooms mixture. Top with remaining
           cheese.<br>Mushroom and Spinach Pizza with Truffle Oil -- Epicurean VeganBake for 10 minutes, or until the edge of the crust browns. Slice and enjoy!
       </div>
-
-
-
-
+    </section>
   </main>
   <footer>
     <h1>Two Vegan Pizza Recipes</h1>
+    <p class="credits">Background Photo by Markus Spiske on Unsplash</p>
   </footer>
 </body>
 
