--- a/restaurants.html
+++ b/restaurants.html
@@ -1,20 +1,66 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link href="./style.css" type="text/css" rel="stylesheet">
 
-    </head>
-    <body>
-    <header>
-        <h1>Pizza Recipe</h1>
-        <div><a href="./index.html">Home</a></div>
-        <div><a href="./recipe.html">Recipe</a></div>
-        <div><a href="./restaurants.html">Restaurants</a></div>
-    </header>
-    <article>
-        <img >
-    </article>
-    <footer>
-        
-    </footer>
-    </body>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="./restaurants-style.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="title">
+      <h1>Restaurants</h1>
+    </div>
+    <nav>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./index.html">Home</a></button>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./recipe.html">Recipes</a></button>
+      <button type="button" class="btn btn-outline-light btn-lg"><a href="./restaurants.html">Restaurants</a></button>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <p>Restaurant @ NW1 6JSX</p>
+    </section>
+    <section>
+      <img src="images\shawn-ang-nmpW_WwwVSc-unsplash.jpg" class="restaurants_img" lt="image of a restaurant">
+    </section>
+    <section class="photo_credits">
+      <p class="credits">Photo by Shawn Ang on Unsplash</p>
+    </section>
+    <section>
+      <p>Restaurant @ SE5 6OLX</p>
+    </section>
+    <section>
+      <img src="images\tim-mossholder-FH3nWjvia-U-unsplash.jpg" class="restaurants_img" lt="image of a restaurant" caption="this is caption">
+    </section>
+    <section class="photo_credits">
+      <p class="credits">Photo by Tim Mossholder on Unsplash</p>
+    </section>
+    <section>
+      <p>Restaurant @ E5 3XFX</p>
+    </section>
+    <section>
+      <img src="images\kayleigh-harrington-yhn4okt6ci0-unsplash.jpg" class="restaurants_img" lt="image of a restaurant">
+    </section>
+    <section class="photo_credits">
+      <p class="credits">Photo by kayleigh harrington on Unsplash</p>
+    </section>
+    <section>
+      <p>Restaurant @ SE5 6OLX</p>
+    </section>
+    <section>
+      <img src="images\jason-leung-poI7DelFiVA-unsplash.jpg" class="restaurants_img" lt="image of a restaurant">
+    </section>
+    <section class="photo_credits">
+      <p class="credits">Photo by Jason Leung on Unsplash</p>
+    </section>
+  </main>
+  <footer>
+    <h1>Two Vegan Pizza Recipes</h1>
+    <p class="credits">Background Photo by Markus Spiske on Unsplash</p>
+  </footer>
+</body>
+
 </html>
